--- a/OpticalValleyUnite/Classes/UI/PatrolResult/View/YQWeatherResult.xib
+++ b/OpticalValleyUnite/Classes/UI/PatrolResult/View/YQWeatherResult.xib
@@ -61,13 +61,6 @@
                         <constraint firstAttribute="height" constant="60" id="1Up-fm-Shf"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8zh-fS-1rN">
-                    <rect key="frame" x="119" y="68" width="95" height="85"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="95" id="ev6-9F-K1a"/>
-                        <constraint firstAttribute="height" constant="85" id="yJ9-ne-m8A"/>
-                    </constraints>
-                </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dVr-ap-Ysx">
                     <rect key="frame" x="123.5" y="2" width="264.5" height="17"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -80,14 +73,14 @@
                     <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lt5-D0-9mc">
+                <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lt5-D0-9mc">
                     <rect key="frame" x="124" y="164.5" width="18" height="18"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="18" id="ReN-Cj-71K"/>
                         <constraint firstAttribute="width" constant="18" id="iEe-V5-Jad"/>
                     </constraints>
-                    <state key="normal" title="Button" image="Oval"/>
-                    <state key="selected" image="ovalcheck"/>
+                    <state key="normal" title="Button" image="weatherD"/>
+                    <state key="selected" image="weatherS"/>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="是" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Qb-mo-V5w">
                     <rect key="frame" x="151.5" y="163" width="17.5" height="21"/>
@@ -95,15 +88,15 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AgE-qe-8U0">
+                <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AgE-qe-8U0">
                     <rect key="frame" x="199" y="164" width="18" height="18"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="18" id="0js-2x-A2l"/>
                         <constraint firstAttribute="width" constant="18" id="wlB-XY-fOY"/>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="18" id="y3s-KK-Uke"/>
                     </constraints>
-                    <state key="normal" title="Button" image="Oval"/>
-                    <state key="selected" image="ovalcheck"/>
+                    <state key="normal" title="Button" image="weatherD"/>
+                    <state key="selected" image="weatherS"/>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="否" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1AL-QF-7j1">
                     <rect key="frame" x="227" y="163" width="17.5" height="21"/>
@@ -111,6 +104,14 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M9Y-oo-atq" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                    <rect key="frame" x="124" y="62" width="95" height="95"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="95" id="8UB-Or-S4C"/>
+                        <constraint firstAttribute="height" constant="95" id="Bjl-Ph-5Vc"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
@@ -126,15 +127,14 @@
                 <constraint firstItem="dVr-ap-Ysx" firstAttribute="leading" secondItem="dtn-GQ-NaO" secondAttribute="trailing" constant="10" id="Rkt-Ob-rxJ"/>
                 <constraint firstItem="0vg-nJ-Mve" firstAttribute="centerX" secondItem="dtn-GQ-NaO" secondAttribute="centerX" id="UFX-Zp-Hjm"/>
                 <constraint firstItem="AgE-qe-8U0" firstAttribute="centerY" secondItem="RWE-4L-T55" secondAttribute="centerY" id="VQH-SU-fyH"/>
-                <constraint firstItem="8zh-fS-1rN" firstAttribute="leading" secondItem="Shu-E4-tZX" secondAttribute="trailing" constant="5" id="X6G-R6-lVb"/>
                 <constraint firstItem="dtn-GQ-NaO" firstAttribute="top" secondItem="t5g-s7-cZ0" secondAttribute="top" id="ZMl-n0-DP8"/>
                 <constraint firstItem="1AL-QF-7j1" firstAttribute="leading" secondItem="AgE-qe-8U0" secondAttribute="trailing" constant="10" id="ZgL-rO-S80"/>
                 <constraint firstItem="1AL-QF-7j1" firstAttribute="centerY" secondItem="RWE-4L-T55" secondAttribute="centerY" id="aHg-5d-mWw"/>
                 <constraint firstItem="imG-Y9-wgi" firstAttribute="leading" secondItem="F8I-XI-37X" secondAttribute="trailing" constant="10" id="aWd-J3-F27"/>
                 <constraint firstItem="RWE-4L-T55" firstAttribute="centerX" secondItem="dtn-GQ-NaO" secondAttribute="centerX" id="cCr-qv-QZY"/>
-                <constraint firstItem="8zh-fS-1rN" firstAttribute="top" secondItem="Shu-E4-tZX" secondAttribute="bottom" constant="-15" id="eEh-2y-8TH"/>
                 <constraint firstItem="RWE-4L-T55" firstAttribute="top" secondItem="Shu-E4-tZX" secondAttribute="bottom" constant="80" id="ePp-tm-vwf"/>
                 <constraint firstItem="F8I-XI-37X" firstAttribute="centerX" secondItem="dtn-GQ-NaO" secondAttribute="centerX" id="gqy-RY-aF4"/>
+                <constraint firstItem="M9Y-oo-atq" firstAttribute="leading" secondItem="Shu-E4-tZX" secondAttribute="trailing" constant="10" id="jvh-oP-ER8"/>
                 <constraint firstAttribute="trailing" secondItem="dVr-ap-Ysx" secondAttribute="trailing" constant="5" id="lGZ-5V-ySA"/>
                 <constraint firstItem="vgZ-O5-oAF" firstAttribute="leading" secondItem="t5g-s7-cZ0" secondAttribute="leading" constant="30" id="lL8-Iw-lSQ"/>
                 <constraint firstAttribute="trailing" secondItem="imG-Y9-wgi" secondAttribute="trailing" constant="5" id="mFh-MR-fAo"/>
@@ -142,6 +142,7 @@
                 <constraint firstItem="KqH-kY-aID" firstAttribute="leading" secondItem="t5g-s7-cZ0" secondAttribute="leading" constant="30" id="mg4-on-uWJ"/>
                 <constraint firstItem="lt5-D0-9mc" firstAttribute="centerY" secondItem="RWE-4L-T55" secondAttribute="centerY" id="rBn-KG-0WH"/>
                 <constraint firstItem="dVr-ap-Ysx" firstAttribute="centerY" secondItem="dtn-GQ-NaO" secondAttribute="centerY" id="tUi-fi-yfa"/>
+                <constraint firstItem="M9Y-oo-atq" firstAttribute="top" secondItem="Shu-E4-tZX" secondAttribute="top" id="vgV-kU-Nqc"/>
                 <constraint firstItem="F8I-XI-37X" firstAttribute="top" secondItem="dtn-GQ-NaO" secondAttribute="bottom" constant="10" id="wQM-nU-Blq"/>
                 <constraint firstItem="KqH-kY-aID" firstAttribute="top" secondItem="0vg-nJ-Mve" secondAttribute="bottom" constant="10" id="xt9-wj-bDA"/>
                 <constraint firstItem="AgE-qe-8U0" firstAttribute="leading" secondItem="6Qb-mo-V5w" secondAttribute="trailing" constant="30" id="z07-ju-2JR"/>
@@ -153,15 +154,15 @@
                 <outlet property="itemImageView" destination="KqH-kY-aID" id="w6y-G5-5U4"/>
                 <outlet property="noBtn" destination="AgE-qe-8U0" id="w8M-up-zi9"/>
                 <outlet property="patrolType" destination="dVr-ap-Ysx" id="sTq-8X-9AI"/>
-                <outlet property="pictureButton" destination="8zh-fS-1rN" id="UZ7-bC-TOn"/>
+                <outlet property="pictureShowImageView" destination="M9Y-oo-atq" id="oOY-zr-7o1"/>
                 <outlet property="remarkView" destination="vgZ-O5-oAF" id="M7E-Lh-GkO"/>
                 <outlet property="yesBtn" destination="lt5-D0-9mc" id="2lp-nY-nI0"/>
             </connections>
-            <point key="canvasLocation" x="107" y="-83"/>
+            <point key="canvasLocation" x="106.5" y="-83.5"/>
         </view>
     </objects>
     <resources>
-        <image name="Oval" width="22" height="22"/>
-        <image name="ovalcheck" width="20" height="20"/>
+        <image name="weatherD" width="22" height="22"/>
+        <image name="weatherS" width="22" height="22"/>
     </resources>
 </document>
