巡查过程,视频巡查管理扩展滚动项,视频管理滚动项bug修复,上下左右连滚的逻辑调整优化

--- a/OpticalValleyUnite/Classes/UI/VideoPatrol/View/YQPatrolBottomLastView.xib
+++ b/OpticalValleyUnite/Classes/UI/VideoPatrol/View/YQPatrolBottomLastView.xib
@@ -17,6 +17,7 @@
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hdd-et-gfp">
                     <rect key="frame" x="0.0" y="0.0" width="160.5" height="47"/>
+                    <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                     <state key="normal" title="上一项">
                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
@@ -44,6 +45,7 @@
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wK6-28-agY">
                     <rect key="frame" x="321.5" y="0.0" width="160.5" height="47"/>
+                    <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                     <state key="normal" title="取消">
                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
