--- a/OpticalValleyUnite/Classes/UI/IntoDoorAdminis/ViewController/YQIntoDoor.storyboard
+++ b/OpticalValleyUnite/Classes/UI/IntoDoorAdminis/ViewController/YQIntoDoor.storyboard
@@ -97,6 +97,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qaV-I0-wj6">
                                 <rect key="frame" x="0.0" y="124" width="375" height="543"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="DHM-fC-cen" id="oGg-j4-kEl"/>
+                                    <outlet property="delegate" destination="DHM-fC-cen" id="hkL-bI-Rku"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
