--- a/OpticalValleyUnite/Classes/UI/IntoDoorAdminis/View/YQDynamicPasswordCell.xib
+++ b/OpticalValleyUnite/Classes/UI/IntoDoorAdminis/View/YQDynamicPasswordCell.xib
@@ -1,19 +1,65 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="YQDynamicPasswordCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pwdCell" rowHeight="78" id="KGk-i7-Jjw" customClass="YQDynamicPasswordCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="366" height="78"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="366" height="78"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="iOO-ib-e6b">
+                        <rect key="frame" x="8" y="5" width="228" height="68"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    </textView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0cy-cg-c6n">
+                        <rect key="frame" x="266" y="23" width="90" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="90" id="2Ww-JD-lC1"/>
+                            <constraint firstAttribute="height" constant="30" id="JfH-2z-ERO"/>
+                        </constraints>
+                        <state key="normal" title="动态密码" backgroundImage="greenBg"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="15"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                        <connections>
+                            <action selector="pwdButtonClick:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="IR1-QS-P9z"/>
+                        </connections>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="0cy-cg-c6n" secondAttribute="trailing" constant="10" id="0Kz-DY-FNf"/>
+                    <constraint firstItem="iOO-ib-e6b" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="BXi-eJ-SVi"/>
+                    <constraint firstItem="0cy-cg-c6n" firstAttribute="leading" secondItem="iOO-ib-e6b" secondAttribute="trailing" constant="30" id="Lvt-JL-FK3"/>
+                    <constraint firstAttribute="bottom" secondItem="iOO-ib-e6b" secondAttribute="bottom" constant="5" id="dcQ-n4-sOs"/>
+                    <constraint firstItem="iOO-ib-e6b" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="ePE-Ro-o3C"/>
+                    <constraint firstItem="iOO-ib-e6b" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="eT8-lh-T5i"/>
+                    <constraint firstItem="0cy-cg-c6n" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="gLa-s0-WpE"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="pwdButton" destination="0cy-cg-c6n" id="seu-0G-chx"/>
+                <outlet property="textView" destination="iOO-ib-e6b" id="7Uk-v8-bEB"/>
+            </connections>
+            <point key="canvasLocation" x="-115" y="34"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="greenBg" width="20" height="36"/>
+    </resources>
 </document>
