--- a/OpticalValleyUnite/Classes/UI/IntoDoorAdminis/View/YQScanCell.xib
+++ b/OpticalValleyUnite/Classes/UI/IntoDoorAdminis/View/YQScanCell.xib
@@ -1,19 +1,59 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="YQScanCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BGscanCell" rowHeight="118" id="KGk-i7-Jjw" customClass="YQScanCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="389" height="118"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="389" height="117.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hyb-5n-dOL">
+                        <rect key="frame" x="10" y="5" width="254" height="107.5"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    </textView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nLf-vf-Vgt">
+                        <rect key="frame" x="314" y="44" width="60" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="0ZS-hH-UYh"/>
+                            <constraint firstAttribute="width" constant="60" id="UDV-6d-gqL"/>
+                        </constraints>
+                        <state key="normal" image="扫描2"/>
+                        <connections>
+                            <action selector="bgScanButtonClick:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Udb-uW-8es"/>
+                        </connections>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="nLf-vf-Vgt" secondAttribute="trailing" constant="15" id="R2W-5x-xgT"/>
+                    <constraint firstItem="hyb-5n-dOL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="X7C-Do-wvo"/>
+                    <constraint firstItem="nLf-vf-Vgt" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ejc-30-pll"/>
+                    <constraint firstItem="nLf-vf-Vgt" firstAttribute="leading" secondItem="hyb-5n-dOL" secondAttribute="trailing" constant="50" id="nfy-vc-7zr"/>
+                    <constraint firstAttribute="bottom" secondItem="hyb-5n-dOL" secondAttribute="bottom" constant="5" id="r6x-8i-tfU"/>
+                    <constraint firstItem="hyb-5n-dOL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="y16-EK-IMy"/>
+                    <constraint firstItem="hyb-5n-dOL" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="zAi-5w-oLD"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="BGScanButton" destination="nLf-vf-Vgt" id="oRG-9n-Gij"/>
+                <outlet property="textView" destination="hyb-5n-dOL" id="i66-is-HaT"/>
+            </connections>
+            <point key="canvasLocation" x="-85.5" y="-42"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="扫描2" width="16" height="16"/>
+    </resources>
 </document>
